// Copyright 2021 Monoskope Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

// This file follows google's gRPC naming conventions:
// https://cloud.google.com/apis/design/naming_convention

import "api/domain/projections/metadata.proto";

option go_package = "github.com/finleap-connect/monoskope/pkg/api/domain/projections";

package projections;

// TenantClusterBinding represents which tenant has access to what cluster
message TenantClusterBinding {
    // Unique identifier of the binding (UUID 128-bit number)
    string id = 1;
    // Unique identifier of the cluster (UUID 128-bit number)
    string cluster_id = 2;
    // Unique identifier of the tenant (UUID 128-bit number)
    string tenant_id = 3;
    // Metadata about the projection
    LifecycleMetadata metadata = 4;
}

message UserClusterRole {
    // Unique identifier of the cluster (UUID 128-bit number)
    string cluster_id = 1;
    // Unique name of the cluster
    string cluster_name = 2;
    // Roles of the user within the cluster
    repeated string cluster_roles = 3;
}